--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue3-carousel": "^0.3.1"
   },
   "devDependencies": {
+    "@types/node": "^20.2.3",
     "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
